--- a/DataSDI/Kelas/UI/ChartKelas.xib
+++ b/DataSDI/Kelas/UI/ChartKelas.xib
@@ -123,7 +123,7 @@ Gw
                 <stackView distribution="fill" orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cqQ-ZL-ayY">
                     <rect key="frame" x="20" y="470" width="315" height="21"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="249" verticalHuggingPriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="Ini-5N-xpH">
+                        <textField focusRingType="none" horizontalHuggingPriority="249" verticalHuggingPriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="Ini-5N-xpH">
                             <rect key="frame" x="-2" y="0.0" width="242" height="21"/>
                             <textFieldCell key="cell" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" selectable="YES" allowsUndo="NO" title="Nilai rata-rata semua kategori" usesSingleLineMode="YES" id="3Zv-2W-LXR">
                                 <font key="font" metaFont="system" size="18"/>
@@ -170,21 +170,21 @@ Gw
                         <real value="3.4028234663852886e+38"/>
                     </customSpacing>
                 </stackView>
-                <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oXT-tn-2je" customClass="PieChartView" customModule="DGCharts">
-                    <rect key="frame" x="380" y="4" width="300" height="244"/>
+                <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oXT-tn-2je">
+                    <rect key="frame" x="380" y="4" width="320" height="244"/>
                 </customView>
-                <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FgR-Nl-uQQ" customClass="BarChartView" customModule="DGCharts">
-                    <rect key="frame" x="20" y="4" width="356" height="458"/>
+                <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FgR-Nl-uQQ">
+                    <rect key="frame" x="0.0" y="4" width="376" height="458"/>
                 </customView>
-                <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qlm-77-f62" customClass="PieChartView" customModule="DGCharts">
-                    <rect key="frame" x="380" y="254" width="300" height="244"/>
+                <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qlm-77-f62">
+                    <rect key="frame" x="380" y="254" width="320" height="244"/>
                 </customView>
                 <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="KdT-J4-PFx">
-                    <rect key="frame" x="380" y="249" width="300" height="4"/>
+                    <rect key="frame" x="380" y="255" width="300" height="4"/>
                 </box>
                 <popUpButton toolTip="Filter nilai untuk ditampilkan di grafis pastel" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ag3-8j-0y8">
-                    <rect key="frame" x="383" y="280" width="26" height="17"/>
-                    <popUpButtonCell key="cell" type="roundRect" title="1" bezelStyle="roundedRect" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" selectedItem="GK5-0T-Xwr" id="jhr-9u-Rbt">
+                    <rect key="frame" x="384" y="480" width="16" height="17"/>
+                    <popUpButtonCell key="cell" type="roundRect" title="1" bezelStyle="roundedRect" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" arrowPosition="noArrow" selectedItem="GK5-0T-Xwr" id="jhr-9u-Rbt">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                         <menu key="menu" id="v3l-Ww-tcE">
@@ -198,8 +198,8 @@ Gw
                     </connections>
                 </popUpButton>
                 <popUpButton toolTip="Filter nilai untuk ditampilkan di grafis pastel kedua" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oaw-T8-UFr">
-                    <rect key="frame" x="383" y="30" width="26" height="17"/>
-                    <popUpButtonCell key="cell" type="roundRect" title="1" bezelStyle="roundedRect" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" selectedItem="A3D-3z-VOC" id="BRs-RU-OFf">
+                    <rect key="frame" x="384" y="230" width="16" height="17"/>
+                    <popUpButtonCell key="cell" type="roundRect" title="1" bezelStyle="roundedRect" alignment="left" controlSize="small" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" arrowPosition="noArrow" selectedItem="A3D-3z-VOC" id="BRs-RU-OFf">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                         <menu key="menu" id="Lbt-2A-uf7">
@@ -214,41 +214,40 @@ Gw
                 </popUpButton>
             </subviews>
             <constraints>
-                <constraint firstItem="oXT-tn-2je" firstAttribute="top" secondItem="KdT-J4-PFx" secondAttribute="bottom" constant="3" id="2Nv-bX-vk7"/>
-                <constraint firstItem="FgR-Nl-uQQ" firstAttribute="leading" secondItem="AQo-9M-4Nv" secondAttribute="leading" constant="20" symbolic="YES" id="3ex-0q-XAT"/>
+                <constraint firstItem="oXT-tn-2je" firstAttribute="top" secondItem="KdT-J4-PFx" secondAttribute="bottom" constant="9" id="2Nv-bX-vk7"/>
+                <constraint firstItem="FgR-Nl-uQQ" firstAttribute="leading" secondItem="AQo-9M-4Nv" secondAttribute="leading" id="3ex-0q-XAT"/>
                 <constraint firstItem="oXT-tn-2je" firstAttribute="leading" secondItem="FgR-Nl-uQQ" secondAttribute="trailing" constant="4" id="3xh-lT-GnB"/>
                 <constraint firstItem="Qlm-77-f62" firstAttribute="leading" secondItem="FgR-Nl-uQQ" secondAttribute="trailing" constant="4" id="5Fe-xb-8me"/>
                 <constraint firstAttribute="bottom" secondItem="oXT-tn-2je" secondAttribute="bottom" constant="4" id="8Ga-aw-HZD"/>
-                <constraint firstAttribute="trailing" secondItem="Qlm-77-f62" secondAttribute="trailing" constant="20" symbolic="YES" id="9o6-aw-gbI"/>
+                <constraint firstItem="KdT-J4-PFx" firstAttribute="leading" secondItem="Qlm-77-f62" secondAttribute="leading" id="8Tk-IH-Cjm"/>
+                <constraint firstAttribute="trailing" secondItem="Qlm-77-f62" secondAttribute="trailing" id="9o6-aw-gbI"/>
                 <constraint firstItem="n6w-rT-0Jw" firstAttribute="leading" secondItem="AQo-9M-4Nv" secondAttribute="leading" id="BZV-79-KpO"/>
                 <constraint firstItem="oXT-tn-2je" firstAttribute="top" secondItem="Qlm-77-f62" secondAttribute="bottom" constant="6" id="CQx-KA-CQU"/>
-                <constraint firstItem="ag3-8j-0y8" firstAttribute="leading" secondItem="iHm-eu-pq6" secondAttribute="trailing" constant="5" id="Cq6-wT-nhe"/>
+                <constraint firstItem="ag3-8j-0y8" firstAttribute="leading" secondItem="iHm-eu-pq6" secondAttribute="trailing" constant="6" id="Cq6-wT-nhe"/>
                 <constraint firstItem="oXT-tn-2je" firstAttribute="leading" secondItem="iHm-eu-pq6" secondAttribute="trailing" constant="2" id="E8Z-vC-oFs"/>
-                <constraint firstItem="KdT-J4-PFx" firstAttribute="top" secondItem="ag3-8j-0y8" secondAttribute="bottom" constant="30" id="GZu-nf-1qj"/>
                 <constraint firstItem="cqQ-ZL-ayY" firstAttribute="leading" secondItem="oBG-an-RpU" secondAttribute="leading" id="JAK-1d-9hb"/>
                 <constraint firstItem="FgR-Nl-uQQ" firstAttribute="top" secondItem="cqQ-ZL-ayY" secondAttribute="bottom" constant="8" id="LHt-GN-Z0S"/>
                 <constraint firstItem="iHm-eu-pq6" firstAttribute="top" secondItem="oBG-an-RpU" secondAttribute="top" constant="28" id="LIH-eF-L25"/>
-                <constraint firstItem="KdT-J4-PFx" firstAttribute="centerY" secondItem="iHm-eu-pq6" secondAttribute="centerY" constant="4" id="MlB-Ep-1Cr"/>
+                <constraint firstItem="KdT-J4-PFx" firstAttribute="centerY" secondItem="iHm-eu-pq6" secondAttribute="centerY" constant="-2" id="MlB-Ep-1Cr"/>
                 <constraint firstItem="cqQ-ZL-ayY" firstAttribute="top" secondItem="n6w-rT-0Jw" secondAttribute="bottom" constant="16" id="St1-Lr-Wi4"/>
                 <constraint firstItem="oBG-an-RpU" firstAttribute="centerY" secondItem="Hmw-BO-SB1" secondAttribute="centerY" id="T9E-rx-Fhq"/>
                 <constraint firstItem="Hmw-BO-SB1" firstAttribute="leading" secondItem="oBG-an-RpU" secondAttribute="trailing" constant="4" id="Wax-qP-8mD"/>
-                <constraint firstAttribute="bottom" secondItem="oaw-T8-UFr" secondAttribute="bottom" constant="31" id="ZMU-Oc-wPD"/>
                 <constraint firstAttribute="bottom" secondItem="FgR-Nl-uQQ" secondAttribute="bottom" constant="4" id="blb-Ns-Dqe"/>
                 <constraint firstItem="Qlm-77-f62" firstAttribute="top" secondItem="AQo-9M-4Nv" secondAttribute="top" constant="45" id="d8l-lV-ubY"/>
                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="350" id="f3S-cw-DAB"/>
+                <constraint firstAttribute="trailing" secondItem="KdT-J4-PFx" secondAttribute="trailing" constant="20" symbolic="YES" id="fSd-Rz-A3z"/>
                 <constraint firstAttribute="bottom" secondItem="iHm-eu-pq6" secondAttribute="bottom" constant="7" id="glR-39-vde"/>
                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="700" id="hUI-tx-fTv"/>
                 <constraint firstItem="oBG-an-RpU" firstAttribute="leading" secondItem="AQo-9M-4Nv" secondAttribute="leading" constant="20" id="hb3-W7-mPY"/>
-                <constraint firstItem="KdT-J4-PFx" firstAttribute="leading" secondItem="oXT-tn-2je" secondAttribute="leading" id="ie0-TC-nIW"/>
-                <constraint firstItem="KdT-J4-PFx" firstAttribute="leading" secondItem="Qlm-77-f62" secondAttribute="leading" id="mHO-FZ-ytF"/>
                 <constraint firstAttribute="trailing" secondItem="iHm-eu-pq6" secondAttribute="trailing" constant="322" id="owM-TM-e4U"/>
                 <constraint firstItem="oBG-an-RpU" firstAttribute="top" secondItem="AQo-9M-4Nv" secondAttribute="top" constant="12" id="peM-Lb-EOv"/>
+                <constraint firstItem="oaw-T8-UFr" firstAttribute="top" secondItem="KdT-J4-PFx" secondAttribute="bottom" constant="10" id="rVk-op-tzB"/>
+                <constraint firstItem="ag3-8j-0y8" firstAttribute="top" secondItem="n6w-rT-0Jw" secondAttribute="bottom" constant="10" id="s2z-YY-wPy"/>
                 <constraint firstAttribute="trailing" secondItem="n6w-rT-0Jw" secondAttribute="trailing" id="sos-sx-oKx"/>
-                <constraint firstItem="KdT-J4-PFx" firstAttribute="trailing" secondItem="Qlm-77-f62" secondAttribute="trailing" id="uDo-AF-bof"/>
                 <constraint firstItem="oaw-T8-UFr" firstAttribute="leading" secondItem="ag3-8j-0y8" secondAttribute="leading" id="wm6-5P-9QO"/>
-                <constraint firstAttribute="trailing" secondItem="oXT-tn-2je" secondAttribute="trailing" constant="20" symbolic="YES" id="xV9-4U-hiL"/>
+                <constraint firstAttribute="trailing" secondItem="oXT-tn-2je" secondAttribute="trailing" id="xV9-4U-hiL"/>
                 <constraint firstItem="n6w-rT-0Jw" firstAttribute="top" secondItem="iHm-eu-pq6" secondAttribute="top" constant="-5" id="zmh-cH-kTZ"/>
-                <constraint firstItem="KdT-J4-PFx" firstAttribute="top" secondItem="Qlm-77-f62" secondAttribute="bottom" constant="3" id="zr2-Z1-qM7"/>
+                <constraint firstItem="KdT-J4-PFx" firstAttribute="top" secondItem="Qlm-77-f62" secondAttribute="bottom" constant="-3" id="zr2-Z1-qM7"/>
             </constraints>
             <point key="canvasLocation" x="39" y="151"/>
         </view>
