--- a/DataSDI/RincianSiswa/StatistikMurid.xib
+++ b/DataSDI/RincianSiswa/StatistikMurid.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="StatistikMurid" customModule="Data_SDI" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="StatistikMurid" customModule="DataSDI" customModuleProvider="target">
             <connections>
                 <outlet property="chartView" destination="Hz6-mo-xeY" id="NrB-RK-b4d"/>
                 <outlet property="namaMurid" destination="oQQ-iH-6Pb" id="nJw-Xg-pLj"/>
@@ -13,17 +14,17 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView identifier="StatistikMurid" id="Hz6-mo-xeY" customClass="CombinedChartView" customModule="DGCharts">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="411"/>
+        <customView identifier="StatistikMurid" id="Hz6-mo-xeY">
+            <rect key="frame" x="0.0" y="0.0" width="388" height="339"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-            <point key="canvasLocation" x="-101" y="220.5"/>
+            <point key="canvasLocation" x="-125" y="256.5"/>
         </customView>
-        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="oQQ-iH-6Pb">
-            <rect key="frame" x="0.0" y="0.0" width="37" height="16"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
+        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="oQQ-iH-6Pb">
+            <rect key="frame" x="0.0" y="0.0" width="72" height="32"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="cUx-fe-8pa">
-                <font key="font" usesAppearanceFont="YES"/>
+                <font key="font" textStyle="title1" name=".SFNS-Regular"/>
                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
             </textFieldCell>
